feat(auth): realized simple route guard to private routes
implemented autorization state via redux-toolkit. Permission to follow the route is provided through
the useCheckAuth hook

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
+  "engines": {
+    "node": "18.0.0"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
@@ -24,7 +27,9 @@
     "eslint-plugin-react": "^7.33.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.21",
